fix text align

--- a/lesson_11/sodaSprings/css/small.css
+++ b/lesson_11/sodaSprings/css/small.css
@@ -121,6 +121,7 @@ h2 {
     margin: 0 auto;
     padding: 1em;
     background-color: #E1E5F2;
+    text-align: center;
 }
 
 main {
